# bajrang

./: AGENTS.md  Cargo.toml  README.md  shell.nix
crates/bajrang-core/: Cargo.toml
crates/bajrang-core/src/: assembler.rs  lib.rs  solver.rs
crates/bajrang-core/src/analysis/: linear_static.rs  mod.rs
crates/bajrang-core/src/assembler/: boundary_conditions.rs  global_stiffness.rs  load_vector.rs  mod.rs
crates/bajrang-core/src/elements/: mod.rs  truss2d.rs
crates/bajrang-core/src/post/: diagrams.rs
crates/bajrang-core/tests/: beam2d.rs  beam3d.rs  diagrams.rs  edge_cases.rs  frame2d.rs  frame3d.rs  mixed2d.rs  truss2d.rs  truss3d.rs
crates/cli/: Cargo.toml
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  expression.rs  main.rs
crates/gui/src/panels/: analysis.rs  mod.rs  model_tree.rs  properties.rs  workspace.rs
crates/gui/src/renderer/: mod.rs  viewport_canvas.rs
crates/gui/src/state/: analysis.rs  editing.rs  mod.rs  model.rs  selection.rs  tools.rs
crates/gui/src/theme/: mod.rs
crates/gui/src/tools/: mod.rs
crates/gui/src/viewport/: mod.rs
crates/io/: Cargo.toml
crates/model/: Cargo.toml
crates/model/src/: boundary.rs  dof.rs  lib.rs  load.rs  material.rs  node.rs  section.rs
crates/model/src/elements/: mod.rs  structural_element.rs  traits.rs  truss2d.rs
crates/model/src/elements/beam/: beam2d.rs  beam3d.rs  mod.rs
crates/model/src/elements/frame/: frame2d.rs  frame3d.rs  mod.rs
crates/model/src/elements/truss/: mod.rs  truss2d.rs  truss3d.rs
