[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
bajrang-core = { path = "../bajrang-core" }
model = { path = "../model" }

iced = { version = "0.14.0", default-features = false, features = [
    "canvas",
    "crisp",
    "fira-sans",
    "linux-theme-detection",
    "thread-pool",
    "wayland",
    "web-colors",
    "wgpu",
    "x11",
] }
